@@ -7,6 +7,8 @@
 
 #include "serialWebRequests.h"
 
+#include "balanceFormat.h"
+
 
 #include "minorGems/game/Font.h"
 #include "minorGems/game/game.h"
@@ -33,10 +35,10 @@ extern double transferCost;
 
 
 
-const char *waitGamePartNames[1] = { "status" };
+const char *waitGamePartNames[2] = { "status", "otherGameList" };
 
 WaitGamePage::WaitGamePage()
-        : ServerActionPage( "wait_game_start", 1, waitGamePartNames ),
+        : ServerActionPage( "wait_game_start", 2, waitGamePartNames ),
           mCancelButton( mainFont, 0, -200, 
                          translate( "cancel" ) ) {
 
@@ -82,7 +84,39 @@ void WaitGamePage::draw( doublePair inViewCenter,
     
     doublePair pos = { 0, 0 };
     
-    drawMessage( "waitingStart", pos );    
+    drawMessage( "waitingStart", pos );
+
+    if( mOtherGames.size() > 0 ) {
+        
+        pos.y -= 72;
+        
+        drawMessage( "otherGames", pos );
+        
+                    
+        pos.y -= 48;
+
+        
+        char **amountStrings = new char*[ mOtherGames.size() ];
+
+        for( int i=0; i<mOtherGames.size(); i++ ) {
+            amountStrings[i] = 
+                formatDollarStringLimited( mOtherGames.getElementDirect( i ),
+                                           false );
+            }
+        
+
+        char *listString = join( amountStrings, mOtherGames.size(), "   " );
+
+        for( int i=0; i<mOtherGames.size(); i++ ) {
+            delete [] amountStrings[i];
+            }
+        delete [] amountStrings;
+        
+
+        drawMessage( listString, pos );
+        delete [] listString;
+        }
+    
     }
 
 
@@ -92,6 +126,29 @@ void WaitGamePage::step() {
 
     if( isResponseReady() ) {
         
+        char *otherGameList = getResponse( "otherGameList" );
+        
+        int numParts;
+        char **parts = split( otherGameList, "#", &numParts );
+
+        delete [] otherGameList;
+
+        mOtherGames.deleteAll();
+        
+        for( int i=0; i<numParts; i++ ) {
+            double value;
+            
+            int numRead = sscanf( parts[i], "%lf", &value );
+            
+            if( numRead == 1 ) {
+                mOtherGames.push_back( value );
+                }
+            delete [] parts[i];
+            }
+        delete [] parts;
+        
+
+
         char *status = getResponse( "status" );
 
         if( strcmp( status, "started" ) == 0) {
